# TerraBuild

./: .dockerignore  .env.dev  .env.example  .replit  BENTON_COUNTY_DELIVERY_READY.md  BOOTSTRAP_ENTERPRISE_SETUP.md  BentonValuationDashboard.tsx  Benton_County_Demo_Script.md  CLEAN_WORKSPACE_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVOPS_README.md  Dockerfile  Dockerfile.enterprise  ENHANCED_MAPPING_CAPABILITIES.md  ENTERPRISE_IMPLEMENTATION_COMPLETE.md  EXECUTIVE_SUMMARY_FINAL.md  INTEGRATION_CAPABILITIES.md  LICENSE  PRD_ENTERPRISE_CIVIL_INFRASTRUCTURE_BRAIN.md  README.md  README_ENTERPRISE.md  RUST_BACKEND_README.md  TERRABUILD_COST_SYSTEM_EXPLAINED.md  TERRABUILD_ENHANCED_SYSTEM_COMPLETE.md  TERRAFUSION_AI_ENTERPRISE_COMPLETE.md  TERRAFUSION_CLEANUP_COMPLETE.md  TERRAFUSION_ENTERPRISE_BRAIN_SYSTEM.md  TERRAFUSION_ENTERPRISE_CLEANUP.md  TERRAFUSION_ENTERPRISE_CLEANUP_COMPLETE.md  TERRAFUSION_ENTERPRISE_COMPLETE.md  TERRAFUSION_GIS_COMPLETE.md  TERRAFUSION_VISION_IMPLEMENTATION.md  USAGE_GUIDE_ENTERPRISE.md  WASHINGTON_STATE_DEPLOYMENT_READY.md  WASHINGTON_STATE_EXPANSION_STRATEGY.md  WA_STATE_CLIENT_ONBOARDING_GUIDE.md  agent-context.md  benton_cost_matrix_live.json  benton_cost_matrix_parser.py  (+57 more)
.github/: pull_request_template.md
archive/: README.md
attached_assets/: Matrix_Upload_UX_Spec (1).md  Pasted--Ctrl-K-to-generate-a-command-judge-lead-the-way-ans-get-teh-team-building-thinking-and-finsihing--1749330518351_1749330518352.txt  Pasted--Drop-in-one-click-refactor-script-swaps-every-marshallSwift-reference-for-CostFacto-1746009387478.txt  Pasted--Generate-a-Python-FastAPI-stub-for-rcn-calculate-Also-prepare-a-sample-JSON-input-and-expect-1747684423929.txt  Pasted--Next-Execution-Priorities-1-Create-Sample-Data-Folder-Purpose-Give-assessors-testers-a-plug-a-1747686591087.txt  Pasted--Product-Requirements-Document-1-Purpose-Scope-Objective-Integrate-a-data-driven-c-1747083261944.txt  ReplitAgentPipeline (1).yaml  (+25 more)
backend/: .env.example  Cargo.toml  Dockerfile  README.md  requirements.txt
backend/app/services/: export_service.py  session_service.py
backend/app/utils/: __init__.py
backend/data/: benton_matrix_demo.json
backend/migrations/: 20240618_create_initial_tables.sql
backend/src/: auth.rs  db.rs  lib.rs  main.rs  models.rs
backend/src/api/: auth.rs  batch.rs  cost_table.rs  gis.rs  mod.rs  report.rs  scenario.rs  valuation.rs
backend/src/services/: mod.rs  scenario.rs  valuation.rs
backend/tests/: integration_tests.rs
backend/tests/common/: mod.rs
deployment/tauri-launcher/src-tauri/: Cargo.toml  tauri.conf.json
deployment/tauri-launcher/src-tauri/src/: main.rs
(+945 files in other folders)
